fix-scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -14,7 +14,12 @@
         }
 
         .admin-main {
-            
+            height: calc(100vh - 50px);
+            // margin-bottom: 10px;
+            .user-pagination {
+                display: flex;
+                justify-content: center;
+            }
         }
     }
 }
